--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-selenium
-webdriver-manager
-pytest
-pytest-html
-pytest-xdist
+selenium==4.9.0
+webdriver-manager==3.8.6
+pytest==7.3.1
+pytest-html==3.2.0
+pytest-xdist==3.2.1
